# IRPI-API

./: .flake8  .gitignore  .mergify.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  auto-gen.py  img  setup.cfg  setup.py  tox.ini
.github/: auto-merge.yml  dependabot.yml
.github/workflows/: autogen.yml  ci.yml  gen-readme.yml  test.yml
IRIP/: __init__.py  create_app.py  typing.py  utils.py  v1.py
IRIP/img/azadi_tower/: info.json
IRIP/img/gisum-talesh/: info.json
IRIP/img/jamkaran_mosque/: info.json
IRIP/img/nature_of_ardabil/: info.json
IRIP/img/persepolis/: info.json
IRIP/img/si-o-se-pol/: info.json
app/: main.py
docs/: conf.py  index.rst
requirements/: dev.in  dev.txt  docs.txt  requirements.txt  test.txt  tests.in  tests.txt
tests/: conftest.py  test_create_app.py  test_utils.py  test_v1.py
