[metadata]
name = IRIP-API
version = attr: IRIP.version.__version__
author = mmdbalkhi
author_email = mmdbalkhi <ahmdparsh129@gmail.com>
description = IRPI is a RESTful API. your can download Iran beautiful Place img.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mmdbalkhi/IRIP-API
project_urls =
    Documentation = https://IRIP.readthedocs.io
    Source Code = https://github.com/mmdbalkhi/IRIP-API
    Bug Tracker = https://github.com/mmdbalkhi/IRIP-API/issues
license = License :: OSI Approved :: GPL-3
classifiers =
    Operating System :: OS Independent
    License :: OSI Approved :: GPL-3 License
    Environment :: Web Environment
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    IRIP
