[metadata]
name = IRIP-API
version = attr: IRIP.version.__version__
author = mmdbalkhi
author_email = mmdbalkhi <ahmdparsh129@gmail.com>
description = IRPI is a RESTful API. your can download Iran beautiful Place img.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mmdbalkhi/IRIP-API
project_urls =
    Documentation = https://IRIP.readthedocs.io
    Source Code = https://github.com/mmdbalkhi/IRIP-API
    Bug Tracker = https://github.com/mmdbalkhi/IRIP-API/issues
license = License :: OSI Approved :: GPL-3

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    IRIP
