[metadata]
name = IRIP
version = 1.0.0
url = https://github.com/mmdbalkhi/IRIP-API/
license = GPL-3
author = mmdbalkhi
author_email = ahmdparsh129@gmail.com
description = IRPI is a RESTful API. you can download Irans beautiful Places image.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    IRIP
